Tests/Modules/Error/Multilingual/.build/catchenglish.pr
{
  "name": "CatchEnglish",
  "description": "Sets the boolean variable %caughtEnglish% to true.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %caughtEnglish% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%caughtEnglish%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/CatchEnglish.goal",
  "prPath": "/.build/catchenglish.pr",
  "hash": "c11b8da5be85fd1d87b8d4c084a19289aaded54eee8dfb3fe09760ef963b462c",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}